third_party/move/move-compiler/tests/move_check/parser/invalid_call_lhs_return2.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/invalid_call_lhs_return2.move:3:20
  │
3 │         (return ())(0, 1);
  │                    ^
  │                    │
  │                    Unexpected '('
  │                    Expected ';'

